apps/Announcements/index.scss
.Window_Announcements {
  @import "./node_modules/bootstrap/dist/css/bootstrap.css";
  @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
  $primary: rgb(182, 157, 230);

  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  html,
  body {
    height: 100%;
    margin: 0;
    padding: 0;
    width: 100%;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
      "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
      "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }

  #root {
    height: 100%;
  }

  .App {
    height: 100%;
  }

  .Announcement-visuals {
    background-color: grey;
    text-align: center;
    display: flex;
    justify-content: center;
    height: 100%;
    position: absolute;
    top: 0px;
  }

  .Announcement-visuals > img {
    width: auto;
    height: 100%;
  }

  .Announcement-content {
    position: absolute;
    width: 100%;
    text-align: center;
    bottom: 0px;
    height: auto;
    background-color: #0000006b;
    color: white;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
      "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
      "Helvetica Neue", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow-y: auto;
  }

  h5,
  h6 {
    white-space: normal;
    font-weight: bolder;
  }

  .announcement-slider {
    position: relative;
    width: 100%;
    margin: 0 auto;
    height: 100%;
    overflow: hidden;
    white-space: nowrap;
  }

  p {
    white-space: normal;
    letter-spacing: 0.03em;
    text-rendering: optimizelegibility;
    line-height: 1.2em;
    margin-left: 6%;
    margin-right: 6%;
    margin-bottom: 1%;
    word-break: break-word;
  }

  .slider-wrapper {
    position: relative;
    height: 100%;
    width: 100%;
  }

  .slide {
    display: inline-block;
    height: 100%;
    width: 100%;
  }

  .arrow {
    height: 50px;
    width: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
    cursor: pointer;
    transition: transform ease-in 0.1s;
    opacity: 0.3;
  }

  div.arrow:hover {
    opacity: 1;
    background-color: white;
  }

  .nextArrow {
    position: absolute;
    bottom: 40%;
    right: 0;
    z-index: 999;
    color: #fff;
    opacity: 0.3;
    background-color: white;
    margin-right: 1%;
    margin-bottom: 20%;
  }

  .backArrow {
    position: absolute;
    bottom: 40%;
    left: 0;
    z-index: 999;
    color: #fff;
    opacity: 0.3;
    background-color: white;
    margin-left: 1%;
    margin-bottom: 20%;
  }

  .fa-arrow-right:before,
  .fa-arrow-left:before {
    color: #222;
  }

  .mainText {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased !important;
    -moz-font-smoothing: antialiased !important;
    text-rendering: optimizelegibility !important;
    letter-spacing: 0.03em;
    max-width: 34em;
    margin: auto;
    padding: 0 1em;
    font-family: "Open Sans", sans-serif;
    justify-content: center;
    font-size: 1rem;
    text-align: center;
  }

  .backButton {
    margin: 15px;
    &:hover {
      box-shadow: 0 2px 6px -1px rgba($primary, 0.65);
      &:active {
        transform: scale(0.99);
      }
    }
  }

  #video {
    max-width: 100%;
    height: 85%;
  }

  .cloud-sliding-panel-container {
    overflow: hidden;
    background-color: #0000004d;
    width: inherit;
    height: inherit;
    display: flex;
    align-items: center;
    flex-direction: column;
    .bottomPanelShow {
      width: 87%;
      height: 81%;
      overflow-y: auto;
    }
    .panel-glass {
      height: inherit;
      width: inherit;
    }
  }

  .readMore {
    -webkit-appearance: none;
    width: auto;
    min-width: 100px;
    border-radius: 24px;
    text-align: center;
    padding: 9px 15px;
    margin-top: 5px;
    background-color: #b08bf8;
    color: #fff;
    font-size: 14px;
    margin-left: auto;
    font-weight: 500;
    box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.13);
    border: none;
    transition: all 0.3s ease;
    outline: 0;
    margin-bottom: 10px;
    &:hover {
      transform: translateY(-3px);
      box-shadow: 0 2px 6px -1px rgba($primary, 0.65);
      &:active {
        transform: scale(0.99);
      }
    }
  }
}

